First working release

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,17 @@
         }
     ],
     "require": {
-        "klein/klein": "^2.1"
+        "klein/klein": "^2.1",
+        "twig/twig": "^1.33"
+    },
+    "autoload":{
+        "psr-4":{
+            "Minifier\\Config\\": "Config",
+            "Minifier\\Controller\\": "Controller",
+            "Minifier\\Exception\\": "Exception",
+            "Minifier\\Manager\\": "Manager",
+            "Minifier\\Model\\": "Model",
+            "Minifier\\Repository\\": "Repository"
+        }
     }
 }
