--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "klein/klein": "^2.1",
     "twig/twig": "^1.33",
-    "symfony/console": "^3.2"
+    "symfony/console": "^3.2",
+    "matthiasmullie/minify": "^1.3"
   },
   "autoload": {
     "psr-4": {
